added feature tests for museum index and show

--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -1,3 +1,7 @@
-<h1><% @museum.name %></h1>
+<h1><%= @museum.name %></h1>
 
-<%= @museum.name %>
+Name: <%= @museum.name %><br>
+Description: <%= @museum.description %><br>
+Hours: <%= @museum.hours %><br>
+Location: <%= @museum.location %><br>
+Admission: <%= @museum.admission %><br>
