first-react-attempt

--- a/app/views/museums/index.html.erb
+++ b/app/views/museums/index.html.erb
@@ -1,6 +1,19 @@
-<h1> Museums </h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Basic HTML Page</title>
+    <link rel="stylesheet" href="home.css">
+  </head>
+
+  <body>
+    <div id="app"/>
 
 
-<% @museums.each do |museum| %>
-<%= link_to museum.name, museum_path(museum)%>
-<% end %>
+    <script src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script src="/app.js"></script>
+    <script src="/bundle.js"></script>
+  </body>
+</html>
+'./react/src/main.js'
+'./app/assets/javascripts'
+src="//code.jquery.com/jquery-2.1.3.min.js"
