Revert "Added the review model and the view all a museums reviews feature"

--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -3,9 +3,5 @@
 Name: <%= @museum.name %><br>
 Description: <%= @museum.description %><br>
 Hours: <%= @museum.hours %><br>
-Address: <%= @museum.address %><br>
+Location: <%= @museum.location %><br>
 Admission: <%= @museum.admission %><br>
-
-<h2>Reviews</h2>
-<%= render partial: "layouts/review", collection: @reviews %>
-<%= render "layouts/new_review_form" %>
