Added review crud actions

--- a/app/views/layouts/_new_review_form.html.erb
+++ b/app/views/layouts/_new_review_form.html.erb
@@ -1,3 +1,4 @@
+<h2>Write a new review</h2>
 <%= form_for [@museum, @review] do |form| %>
   <% if @review.errors.any? %>
     <div id="error_explanation">
