--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -8,4 +8,11 @@ Admission: <%= @museum.admission %><br>
 
 <h2>Reviews</h2>
 <%= render partial: "layouts/review", collection: @reviews %>
-<%= render "layouts/new_review_form" %>
+
+<% if user_signed_in? %>
+  <%= render "layouts/new_review_form" %>
+<% else %>
+  <h4> Please sign in or create and account to leave your review. </h4>
+  <li><%= link_to "Create Account", new_user_registration_path%></li>
+  <li><%= link_to "Sign In", new_user_session_path%></li>
+<% end %>
