--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -6,10 +6,10 @@ Address: <%= @museum.location %><br>
 Admission: <%= @museum.admission %><br>
 
 <h2>Reviews</h2>
-<%= render partial: "layouts/review", collection: @reviews %>
+<%= render partial: "shared/review", collection: @reviews %>
 
 <% if user_signed_in? %>
-  <%= render "layouts/review_form" %>
+  <%= render "shared/review_form" %>
 <% else %>
   <h4> Please sign in or create and account to leave your review. </h4>
   <li><%= link_to "Create Account", new_user_registration_path%></li>
