--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,3 +1,3 @@
 
-<%= render "layouts/review_form", review: @review, museum: @museum %>
+<%= render "shared/review_form", review: @review, museum: @museum %>
 <%@museum =  %>
