--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -2,7 +2,7 @@
 Name: <%= @museum.name %><br>
 Description: <%= @museum.description %><br>
 Hours: <%= @museum.hours %><br>
-Address: <%= @museum.location %><br>
+Address: <%= @museum.address %><br>
 Admission: <%= @museum.admission %><br>
 
 <h2>Reviews</h2>
