--- a/app/views/shared/_review.html.erb
+++ b/app/views/shared/_review.html.erb
@@ -4,6 +4,13 @@
 <% end %>
 
 <% if user_signed_in? && review.user == current_user%>
+  <ul>
+    <li id="score_<%=review.id%>">
+      Score: <%= review.rating %>
+      <button id="<%= review.id%>" class="upvote">Upvote</button>
+      <button id="<%= review.id%>" class="downvote">Downvote</button>
+    </li>
+  </ul>
 <%= link_to 'Edit This Review', edit_museum_review_path(review.museum, review) %>
-<%= link_to 'Delete This Review', museum_review_path(review), method: :delete %>
+<%= link_to 'Delete This Review', museum_review_path(review.museum, review), method: :delete %>
 <% end %>
