controller bug fix, not votes

--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,3 +1,2 @@
-
-<%= render "shared/review_form", review: @review, museum: @museum %>
-<%@museum =  %>
+<% binding.pry %>
+<%= render "review_form", review: @review, museum: @museum %>
