--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -6,17 +6,19 @@ Address: <%= @museum.location %><br>
 Admission: <%= @museum.admission %><br>
 
 <h2>Reviews</h2>
-<% @reviews.each do |review| %>
-  <h4>Rating: <%= review.rating %></h4>
-  <% if review.body %>
-    <p><%= review.body %></p>
-  <% end %>
+<% if @reviews %>
+  <% @reviews.each do |review| %>
+    <h4>Rating: <%= review.rating %></h4>
+    <% if review.body %>
+      <p><%= review.body %></p>
+    <% end %>
 
-  <% if user_signed_in? && review.user == current_user%>
-  <%= link_to 'Edit This Review', edit_museum_review_path(review.museum, review) %>
-  <%= link_to 'Delete This Review', museum_review_path(review), method: :delete %>
+    <% if user_signed_in? && review.user == current_user%>
+    <%= link_to 'Edit This Review', edit_museum_review_path(review.museum, review) %>
+    <%= link_to 'Delete This Review', museum_review_path(review), method: :delete %>
+    <% end %>
   <% end %>
-<%end %>
+<% end %>
 <% if user_signed_in? %>
   <%= render "reviews/review_form" %>
 <% else %>
