--- a/app/views/shared/_review.html.erb
+++ b/app/views/shared/_review.html.erb
@@ -2,15 +2,15 @@
 <% if review.body %>
   <p><%= review.body %></p>
 <% end %>
-
-<% if user_signed_in? && review.user == current_user%>
   <ul>
-    <li id="score_<%=review.id%>">
-      Score: <%= review.rating %>
+    <li>
+      <%= review.rating %>
       <button id="<%= review.id%>" class="upvote">Upvote</button>
       <button id="<%= review.id%>" class="downvote">Downvote</button>
     </li>
   </ul>
+
+<% if user_signed_in? && review.user == current_user%>
 <%= link_to 'Edit This Review', edit_museum_review_path(review.museum, review) %>
 <%= link_to 'Delete This Review', museum_review_path(review.museum, review), method: :delete %>
 <% end %>
