--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,6 @@
-<h2>Sign up</h2>
+<h2>Edit Profile</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<%= form_for(@user) do |f| %>
 
   <div class="field">
     <%= f.label :first_name, "First Name" %><br />
@@ -23,6 +22,20 @@
     <%= f.email_field :email, autofocus: true %>
   </div>
 
+
+  <div class="field">
+    <%= f.label :city, "Home City" %><br />
+    <%= f.text_field :city, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :state %><br />
+    <%= f.text_field :state, autofocus: true %>
+  </div>
+
+<h3>
+  Please enter your password to confirm changes.
+</h3>
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
@@ -36,19 +49,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <div class="field">
-    <%= f.label :city, "Home City" %><br />
-    <%= f.text_field :city, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :state %><br />
-    <%= f.text_field :state, autofocus: true %>
-  </div>
-
   <div class="actions">
-    <%= f.submit "Create Account" %>
+    <%= f.submit "Update Profile" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
