--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,53 +1,93 @@
-<h2>Sign up</h2>
+<div class="top-bar">
+  <div class="top-bar-left">
+    <ul class="menu">
+      <li class="menu-text"><h4> Museum Reviews </h4></li>
+  </div>
+
+  <div class="top-bar-right">
+    <ul class="menu horizontal">
+      <% if user_signed_in? %>
+          <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Create Account", new_user_registration_path%></li>
+          <li><%= link_to "Sign In", new_user_session_path%></li>
+      <% end %>
+    </ul>
+    </ul>
+  </div>
+</div>
+
+<div class="row">
+  <div class="small-9 large-centered columns"><h1>Sign up</h1></div>
+</div>
+
+
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+  <div class="row">
 
-  <div class="field">
-    <%= f.label :first_name, "First Name" %><br />
+    <div class="field small-3 columns">
+      <%= f.label :first_name, "First Name" %>
+    </div>
+    <div class="field small-8 columns">
     <%= f.text_field :first_name, autofocus: true %>
-  </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :last_name, "Last Name" %><br />
+    <div class="field small-3 columns">
+      <%= f.label :last_name, "Last Name" %>
+    </div>
+    <div class="field small-8 columns">
     <%= f.text_field :last_name, autofocus: true %>
-  </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true %>
-  </div>
+    <div class="field small-3 columns">
+      <%= f.label :username %>
+    </div>
+    <div class="field small-8 columns">
+      <%= f.text_field :username, autofocus: true %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
+    <div class="field small-3 columns">
+      <%= f.label :email %>
+    </div>
+    <div class="field small-8 columns">
     <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm Password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :city, "Home City" %><br />
-    <%= f.text_field :city, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :state %><br />
-    <%= f.text_field :state, autofocus: true %>
-  </div>
+    </div>
 
 
 
+    <div class="field small-3 columns">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+        <!-- <em>(<%= @minimum_password_length %> characters minimum)</em> -->
+      <% end %>
+    </div>
+    <div class="field small-8 columns">
+      <%= f.password_field :password, autocomplete: "off", placeholder: "6 characters minumum"  %>
+    </div>
+
+    <br>
+    <div class="field small-3 columns">
+      <%= f.label :password_confirmation, "Confirm Password" %>
+    </div>
+    <div class="field small-8 columns">
+      <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "6 characters minumum" %>
+    </div>
+
+    <div class="field small-3 columns">
+      <%= f.label :city, "Home City" %>
+    </div>
+    <div class="field small-8 columns">
+      <%= f.text_field :city, autofocus: true %>
+    </div>
+
+    <div class="field small-3 columns">
+      <%= f.label :state %>
+    </div>
+    <div class="field small-8 columns">
+      <%= f.text_field :state, autofocus: true %>
+    </div>
 
   <div class="actions">
     <%= f.submit "Create Account" %>
@@ -55,3 +95,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
