--- a/app/views/museums/index.html.erb
+++ b/app/views/museums/index.html.erb
@@ -1,13 +1,28 @@
-<ul>
-  <% if user_signed_in? %>
-      <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
-    <% else %>
-      <li><%= link_to "Create Account", new_user_registration_path%></li>
-      <li><%= link_to "Sign In", new_user_session_path%></li>
-  <% end %>
-</ul>
+<div class="top-bar">
+  <div class="top-bar-left">
+    <ul class="menu">
+      <li class="menu-text"><h4> Museum Reviews </h4></li>
+  </div>
 
-<h1> Museums </h1>
+  <div class="top-bar-right">
+    <ul class="menu horizontal">
+      <% if user_signed_in? %>
+          <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Create Account", new_user_registration_path%></li>
+          <li><%= link_to "Sign In", new_user_session_path%></li>
+      <% end %>
+    </ul>
+    </ul>
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-12 large-centered columns"><h1>Museums</h1></div>
+  <div class ="search small-10 columns"> <input type="search" placeholder="Search"> </div>
+  <button type="button" class= "button small-2 columns button">Search</button>
+</div>
+
 
 <% @museums.each do |museum| %>
 <%= link_to museum.name, museum_path(museum)%>
