--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -1,18 +1,27 @@
 <h1><%= @museum.name %></h1>
 
+<p>
 Name: <%= @museum.name %><br>
 Description: <%= @museum.description %><br>
 Hours: <%= @museum.hours %><br>
 Address: <%= @museum.location %><br>
 Admission: <%= @museum.admission %><br>
+</p>
 
-<h2>Reviews</h2>
-<%= render partial: "layouts/review", collection: @reviews %>
 
-<% if user_signed_in? %>
-  <%= render "layouts/new_review_form" %>
-<% else %>
-  <h4> Please sign in or create and account to leave your review. </h4>
-  <li><%= link_to "Create Account", new_user_registration_path%></li>
-  <li><%= link_to "Sign In", new_user_session_path%></li>
-<% end %>
+
+
+<div class='review_form'>
+  <% if user_signed_in? %>
+    <%= render "layouts/new_review_form" %>
+<div>
+  <% else %>
+    <h4> Please sign in or create and account to leave your review. </h4>
+    <li><%= link_to "Create Account", new_user_registration_path%></li>
+    <li><%= link_to "Sign In", new_user_session_path%></li>
+  <% end %>
+
+  <div class='reviews'>
+    <h2>Reviews</h2>
+      <%= render partial: "layouts/review", collection: @reviews %>
+  </div>
