--- a/app/views/shared/_review.html.erb
+++ b/app/views/shared/_review.html.erb
@@ -3,7 +3,7 @@
   <p><%= review.body %></p>
 <% end %>
   <ul>
-    <li>
+    <li id="score_<%= review.id %>">
       <%= review.rating %>
       <button id="<%= review.id%>" class="upvote">Upvote</button>
       <button id="<%= review.id%>" class="downvote">Downvote</button>
