--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @museum.name %></h1>
+<h3>Rating: <%= @rating %></h3>
 Name: <%= @museum.name %><br>
 Description: <%= @museum.description %><br>
 Hours: <%= @museum.hours %><br>
