votes votes, more votes

--- a/app/views/museums/index.html.erb
+++ b/app/views/museums/index.html.erb
@@ -23,7 +23,6 @@
   <button type="button" class= "button small-2 columns button">Search</button>
 </div>
 
-
-<% @museums.each do |museum| %>
-<%= link_to museum.name, museum_path(museum)%>
-<% end %>
+<div id="app">
+  Loading
+</div>
