--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -33,6 +33,13 @@
     <%= f.text_field :state, autofocus: true %>
   </div>
 
+  <div class="field">
+  <%= f.label :avatar %>
+</div>
+  <div class="field">
+  <%= f.file_field :avatar %>
+</div>
+
 <h3>
   Please enter your password to confirm changes.
 </h3>
