trello board fixes

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -76,7 +76,7 @@
     </div>
 
     <div class="field small-3 columns">
-      <%= f.label :city, "Home City" %>
+      <%= f.label :city, "City" %>
     </div>
     <div class="field small-8 columns">
       <%= f.text_field :city, autofocus: true %>
