--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -1,9 +1,12 @@
 <h1><%= @museum.name %></h1>
-Name: <%= @museum.name %><br>
-Description: <%= @museum.description %><br>
-Hours: <%= @museum.hours %><br>
+Hours:
+<% JSON.parse(@museum.hours).each do |day| %>
+<li><%= day %></li>
+<% end %>
+<br>
 Address: <%= @museum.location %><br>
-Admission: <%= @museum.admission %><br>
+Website: <%= @museum.website %><br>
+Phone: <%= @museum.phone_number %><br>
 </p>
 
 <h2>Reviews</h2>
@@ -28,7 +31,7 @@ Admission: <%= @museum.admission %><br>
   <%= render "reviews/review_form" %>
 <% else %>
   <ul>
-    <h4> Please sign in or create and account to leave your review. </h4>
+    <h4> Please sign in or create an account to leave your review. </h4>
     <li><%= link_to "Create Account", new_user_registration_path%></li>
     <li><%= link_to "Sign In", new_user_session_path%></li>
   </ul>
