--- a/app/views/reviews/_review_form.html.erb
+++ b/app/views/reviews/_review_form.html.erb
@@ -5,25 +5,13 @@
 <%end%>
 
 <%= form_for [@museum, @review] do |form| %>
-  <% if @review.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
-
-      <ul>
-      <% @review.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
   <div class="rating">
     <%= form.label :rating %>
     <%= form.text_field :rating %>
   </div>
 
   <div class="body">
-    <%= form.label :body %>
+    <%= form.label :body, "Your Review"%>
     <%= form.text_area :body %>
   </div>
 
