--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,3 +11,5 @@
 <h3>Admin Features<h3>
 <%= link_to 'See All Users', admin_users_path %>
 <% end %>
+
+<%= link_to 'Back to Museums', museums_path %>
