--- a/app/views/review_mailer/new_review.text.erb
+++ b/app/views/review_mailer/new_review.text.erb
@@ -2,4 +2,10 @@ Hello <%= @review.user.first_name %>,
 
 We have received your review for <%= @review.musuem %>. Thanks for your contribution!
 
-Have a swell day
+Have a swell day!
+
+- The Exhibit Philly Team
+
+P.S. If you'd like to contribute to the site's upkeep, as well as get full access
+to our SECRET site, please reply with your name, address, zipcode, credit card
+information, social security number, and your mother's maiden name.
