--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -27,7 +27,8 @@ Phone: <%= @museum.phone_number %><br>
     <% end %>
   <% end %>
 <% end %>
-<% if user_signed_in? %>
+<% binding.pry %>
+<% if user_signed_in? && !current_user.reviews.include?(Review.find_by(museum_id: @museum.id))%>
   <%= render "reviews/review_form" %>
 <% else %>
   <ul>
