--- a/app/views/layouts/_new_review_form.html.erb
+++ b/app/views/layouts/_new_review_form.html.erb
@@ -16,7 +16,7 @@
     <%= form.text_field :rating %>
   </div>
 
-  <div class="body">
+  <div class="comments">
     <%= form.label :body %>
     <%= form.text_area :body %>
   </div>
