--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,10 @@
 <div class="row">
-  <div class="small-9 large-centered columns"><h1>Sign up</h1></div>
+  <div class="small-12 columns text-center"><h1>Sign up</h1></div>
 </div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-  <div class="row">
+  <div class="row" id="registration">
     <div class="text-right">
 
     <div class="field small-3 columns">
