--- a/app/views/reviews/_review_form.html.erb
+++ b/app/views/reviews/_review_form.html.erb
@@ -25,7 +25,7 @@
   </div>
 
   <div class="body">
-      <%= form.label :body %>
+      <%= form.label :body, "Your Review" %>
       <%= form.text_area :body %>
   </div>
 </div>
