--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <ul class="menu horizontal" id=top-bar-right>
           <% if user_signed_in? %>
               <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+              <li><%= link_to "My Profile", user_path(current_user) %></li>
             <% else %>
               <li><%= link_to "Create Account", new_user_registration_path%></li>
               <li><%= link_to "Sign In", new_user_session_path%></li>
