--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,11 @@
 <h1><%= @user.first_name %> <%= @user.last_name %>'s Profile</h1>
-
+<%= image_tag @user.avatar.url if @user.avatar? %>
 <p>Email: <%= @user.email %></p>
 <p>Username: <%= @user.username %></p>
 <p>From: <%= @user.city %>, <%= @user.state %></p>
-<%= link_to 'Edit my Profile', edit_user_path(@user) %>
+<%= link_to 'Edit my Profile', edit_user_path(@user) %><br>
 <%= link_to 'Delete my Account', user_path(@user), method: :delete %>
-
+<br>
 <% if @user.admin %>
-<h3>Admin Features<h3>
 <%= link_to 'See All Users', admin_users_path %>
 <% end %>
-
-<%= link_to 'Back to Museums', museums_path %>
