--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,7 +22,11 @@ h1{
 }
 
 h2{
-  font-family: sans-serif;
+  font-family: 'Old Standard TT', serif;
+}
+
+h4{
+  font-family: 'Old Standard TT', serif;
 }
 
 .top-bar-left{
@@ -35,6 +39,8 @@ h2{
 
 body {
   background-color: #E8D9BA;
+  font-family: 'Old Standard TT', serif;
+  font-size: 20px
 }
 
 .menu-text{
@@ -99,4 +105,12 @@ p.review-body{
 
 #app{
   margin: 15px 15%;
+}
+
+#profile_links {
+  padding-left: 25px;
+}
+
+#user-information {
+  margin-bottom: 20px;
 }
