updated registration form

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -100,3 +100,11 @@ p.review-body{
 #app{
   margin: 15px 15%;
 }
+
+/*.avatar{
+  padding-right: 30px;
+}*/
+
+/*.create-account{
+  padding-left: 60px;
+}*/
