--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -1,6 +1,8 @@
-<div class ="row">
+<a href=<%= @museum.website %> id="show-header">
   <h1><%= @museum.name %></h1>
-  <%= image_tag @museum.photo %>
+</a>
+<div id="show-img-container">
+    <%= image_tag(@museum.photo, class: "museum-photo-show") %>
 </div>
 
 <div class="row">
@@ -35,22 +37,21 @@
        <div class="small-8 small-centered" id="review">
          <%= image_tag review.user.avatar.url if current_user.avatar? %>
           <%= review.user.username %>'s thoughts:
-         <h4>Rating: <%= review.rating %></h4>
-         <% if review.body %>
-         <div class="small-12 columns">
-          <p class="review-body"><%= review.body %></p>
-        </div>
-        <p id="score_<%= review.id %>">
+         <h2>Rating: <%= review.rating %></h2>
+         <% if review.body %><p class="review-body"><%= review.body %></p>
+        <h4 class="score" id="score_<%= review.id %>">
           Score: <%= review.score %>
-        </p>
-        <button id="<%= review.id%>" class="upvote">Upvote</button>
-        <button id="<%= review.id%>" class="downvote">Downvote</button>
-         <% end %>
+        </h4>
+        <div class="button-group" id="score-buttons">
+          <button id="<%= review.id%>" class="button upvote">Upvote</button>
+          <button id="<%= review.id%>" class="button downvote">Downvote</button>
+        </div>
 
-
+       <% end %>
+        <br>
          <% if user_signed_in? && review.user == current_user%>
-           <%= link_to 'Edit This Review', edit_museum_review_path(review.museum, review) %><br>
-           <%= link_to 'Delete This Review', museum_review_path(review.museum, review), method: :delete %>
+           <%= link_to 'Edit Review', edit_museum_review_path(review.museum, review) %>
+           <%= link_to 'Delete Review', museum_review_path(review.museum, review), method: :delete %>
          <% end %>
 
          <% if user_signed_in? && current_user.admin %>
