--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -41,7 +41,7 @@
       <% end %>
     </div>
     <div class="field small-8 columns">
-      <%= f.password_field :password, autocomplete: "off", placeholder: "6 characters minumum"  %>
+      <%= f.password_field :password, autocomplete: "off", placeholder: "6 characters minimum"  %>
     </div>
 
     <br>
@@ -49,7 +49,7 @@
       <%= f.label :password_confirmation, "Confirm Password" %>
     </div>
     <div class="field small-8 columns">
-      <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "6 characters minumum" %>
+      <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "6 characters minimum" %>
     </div>
 
     <div class="field small-3 columns">
