--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="small-12 large-6 columns" id="user-information">
+  <div class="small-12 columns" id="user-information">
     <h1><%= @user.first_name %> <%= @user.last_name %>'s Profile</h1>
       <% unless @user.avatar.url.nil? then %>
         <%= image_tag @user.avatar.url %>
