updated indentation on css file

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -41,7 +41,7 @@
       <% end %>
     </div>
     <div class="field small-8 columns">
-      <%= f.password_field :password, autocomplete: "off", placeholder: "6 characters minumum"  %>
+      <%= f.password_field :password, autocomplete: "off", placeholder: "6 characters minimum"  %>
     </div>
 
     <br>
