--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,6 +4,7 @@ body {
   background-color: #E8D9BA;
   font-family: 'Old Standard TT', serif;
   font-size: 20px
+}
 
 #show-header {
   color: black;
