--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -37,7 +37,7 @@
    <% if @reviews %>
        <% @reviews.each do |review| %>
        <div class="small-8 small-centered" id="review">
-         <% unless review.user.avatar.url.nil? then %>
+         <% unless review.user.avatar.url.nil? %>
        <%= image_tag review.user.avatar.url %>
        <% end %>
           <%= review.user.username %>'s thoughts:
