tried to fix some tests

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -58,7 +58,7 @@
   Please enter your password to confirm changes.
 </h3>
   </div>
-    <%= f.password_field :password, autocomplete: "off", placeholder: "6 characters minumum"  %>
+    <%= f.password_field :password, autocomplete: "off", placeholder: "6 characters minumum", name: 'password'  %>
   </div>
   <div class="actions small-4 columns">
     <%= f.submit "Update Profile" %>
