--- a/app/views/reviews/_review_form.html.erb
+++ b/app/views/reviews/_review_form.html.erb
@@ -1,33 +1,37 @@
 <div class="row">
-<% if controller.action_name == "show" %>
-  <h2>Write a new review</h2>
-<%elsif controller.action_name == "edit" %>
-  <h2>Edit your review</h2>
-<%end%>
+  <% if controller.action_name == "show" %>
+    <h2>Write a new review</h2>
+  <%elsif controller.action_name == "edit" %>
+    <h2>Edit your review</h2>
+  <%end%>
 
-<%= form_for [@museum, @review] do |form| %>
-  <% if @review.errors.any? %>
+  <%= form_for [@museum, @review] do |form| %>
+    <% if @review.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
 
       <ul>
-      <% @review.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% @review.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
-  <% end %>
+    <% end %>
 
+    <div class="rating">
+      <%= form.label :rating %>
+      <%= form.text_field :rating %>
+    </div>
 
-  <div class="rating">
-    <%= form.label :rating %>
-    <%= form.text_field :rating %>
-  </div>
-
-  <div class="body">
+    <div class="body">
       <%= form.label :body, "Your Review" %>
       <%= form.text_area :body %>
-  </div>
+    </div>
+    <% if controller.action_name == "show" %>
+    <%= form.submit 'Create Review'%>
+    <%elsif controller.action_name == "edit" %>
+    <%= form.submit 'Update Review'%>
+    <%end%>
+
+  <% end %>
 </div>
-  <%= form.submit %>
-<% end %>
